# nova_developer_kit

./: .gitattributes  README.md  nova_developer_kit.repos
docker/: Dockerfile.nova_developer_kit
nova_developer_kit_bringup/: CMakeLists.txt  package.xml
nova_developer_kit_bringup/foxglove_layouts/: nova_developer_kit_perceptor.json  nova_developer_kit_perceptor_with_people.json  nova_developer_kit_sensors.json
nova_developer_kit_bringup/launch/: perceptor.launch.py  sensors.launch.py
nova_developer_kit_bringup/launch/include/: hardware_abstraction_layer_include.launch.py  perceptor_include.launch.py  sensors_include.launch.py
nova_developer_kit_bringup/test/: CMakeLists.txt
nova_developer_kit_description/: CMakeLists.txt  package.xml
nova_developer_kit_description/launch/: nova_developer_kit_description.launch.py
nova_developer_kit_description/meshes/: nova_developer_kit.mtl
nova_developer_kit_description/urdf/: nova_developer_kit.urdf.xacro  nova_developer_kit_macro.urdf.xacro
